# gametank-games

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  dockerfile
.github/workflows/: podman-build.yml
.sqlx/: query-1212e060dcdc020233a90e1ee0d1c10de8c4b7ed7bd5c28c4d73fb5324f811ac.json  query-1eca020693e7c151bed58a20fd616a087cca9f317478995c32f826235a7f4c97.json  query-b68b89614128ef113b95bc15ad8376d7c5663f28c4a2a75463ad2ea0225ed983.json  query-e73f6e640a2d3354004e15b5deeac51a22a3342e7eb8a0c5b57ed331a5f19702.json
darn_authorize_macro/: Cargo.toml
darn_authorize_macro/src/: lib.rs
migrations/: 0001_init.sql
src/: darn.rs  games.rs  main.rs
src/auth/: authn_keycloak.rs  authz_casbin.rs  mod.rs  rbac_model.conf  site_roles.rs  traits.rs
src/games/: create_game.rs  game_roles.rs  get_game.rs  mod.rs  patch_game.rs
ui/: .babelrc  package-lock.json  package.json  webpack.config.js
ui/css/: _fonts.scss  styles.scss
ui/public/: index.html
ui/public/js/: mithril.js
ui/src/: api.coffee  debug.coffee  emu.coffee  index.coffee  keycloak.coffee  main.coffee  upload.coffee
